--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #fff;
 }
 
 h1 {
@@ -25,6 +26,8 @@ p {
 @media (min-width: 768px) {
   .login {
     padding: 30px 40px;
+    width: 80%;
+    margin: 0 auto;
   }
 }
 @media (min-width: 1366px) {
@@ -33,6 +36,8 @@ p {
     padding: 0;
     height: 100vh;
     grid-template-columns: 50% 50%;
+    width: 100%;
+    margin: 0;
   }
 }
 .login .login__desktop {
