--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,22 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
 * {
-    font-family: "Inter", sans-serif;
     outline: none;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-    margin: 0;
-    padding: 0;
     background-color: #fff;
-}
-
-h1 {
-    padding: 0;
-    margin: 0;
-}
-
-p {
-    padding: 0;
-    margin: 0;
+    font-family: "Inter", sans-serif;
 }
