--- a/styles/index.css
+++ b/styles/index.css
@@ -1,23 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 * {
-  font-family: "Inter", sans-serif;
   outline: none;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   background-color: #fff;
-}
-
-h1 {
-  padding: 0;
-  margin: 0;
-}
-
-p {
-  padding: 0;
-  margin: 0;
+  font-family: "Inter", sans-serif;
 }
 
 .login {
@@ -30,7 +24,7 @@ p {
     margin: 0 auto;
   }
 }
-@media (min-width: 1366px) {
+@media (min-width: 1024px) {
   .login {
     display: grid;
     padding: 0;
@@ -44,7 +38,7 @@ p {
   background-color: #f8f9ff;
   padding: 20px 60px 30px 60px;
 }
-@media (max-width: 1365px) {
+@media (max-width: 1023px) {
   .login .login__desktop {
     display: none;
   }
@@ -71,7 +65,7 @@ p {
   gap: 10px;
   background-color: #fff;
 }
-@media (min-width: 1366px) {
+@media (min-width: 1024px) {
   .login__section {
     padding-top: 30px;
     padding: 30px 60px;
@@ -176,6 +170,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 20px;
   border: 1px solid #333333;
   padding: 10px 30px;
 }
@@ -186,10 +181,6 @@ p {
   color: #333333;
   font-weight: 600;
   font-size: 12px;
-}
-.login__with--google--img {
-  width: 30px;
-  height: 30px;
 }
 .login__with--google--text, .login__with--apple--text {
   font-size: 12px;
