--- a/styles/index.css
+++ b/styles/index.css
@@ -46,19 +46,25 @@ body {
 .login .login__desktop__logo img {
   width: 80px;
 }
+.login .login__desktop__logo img:hover {
+  cursor: pointer;
+}
 .login .login__desktop__container {
-  padding-top: 40px;
+  padding-top: 30px;
 }
 .login .login__desktop__container h1 {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 2.1875rem;
 }
 .login .login__desktop__container p {
-  font-size: 12px;
-  padding: 15px 0;
+  font-size: 0.75rem;
+  padding: 20px 0;
+}
+.login .login__desktop__main--img {
+  padding-top: 40px;
 }
 .login .login__desktop__main--img img {
-  width: 60%;
+  width: 50%;
   height: 30%;
 }
 .login__section {
@@ -79,7 +85,7 @@ body {
   color: #fff;
   padding: 12px 18px;
   border: none;
-  font-size: medium;
+  font-size: 0.9375rem;
   background-color: #002695;
   border-radius: 5px;
 }
@@ -92,11 +98,11 @@ body {
 }
 .login__header--text h1 {
   font-weight: bolder;
-  font-size: 20px;
+  font-size: 1.25rem;
   padding-bottom: 12px;
 }
 .login__header--text p {
-  font-size: 13px;
+  font-size: 0.75rem;
   padding-bottom: 22px;
 }
 .login__section, .login__form--section, .login__input--label--container {
@@ -107,7 +113,7 @@ body {
   color: #fff;
   background-color: #002695;
   border: none;
-  font-size: 15px;
+  font-size: 0.9375rem;
   padding: 14px;
   border-radius: 5px;
 }
@@ -135,10 +141,13 @@ body {
   justify-content: space-between;
 }
 .login__remember--me--forgot--password--section h2 {
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 600;
   color: #002695;
   font-weight: bold;
+}
+.login__remember--me--forgot--password--section h2:hover {
+  cursor: pointer;
 }
 .login__remember--me--section {
   display: flex;
@@ -146,12 +155,12 @@ body {
   gap: 7px;
 }
 .login__remember--me--section p {
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 600;
 }
 .login__or--section {
   color: #333333;
-  font-size: 12px;
+  font-size: 0.75rem;
   display: flex;
   align-items: center;
   gap: 7px;
@@ -180,10 +189,10 @@ body {
 .login__with--google p, .login__with--apple p {
   color: #333333;
   font-weight: 600;
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 .login__with--google--text, .login__with--apple--text {
-  font-size: 12px;
+  font-size: 0.75rem;
   color: #333333;
   font-weight: 600;
   padding: 0 14px;
@@ -195,7 +204,7 @@ body {
 }
 .login__help--center--section h1,
 .login__help--center--section p {
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 .login__help--center--section p {
   color: #002695;
